# script-server

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  a_openbsd_issue.md  configs_model.py  docker-compose.yml  execution.py  execution_popen.py  execution_pty.py  external_model.py  file_download_feature.py  launcher.py  logging.json  model_helper.py  pyproject.toml  requirements.txt  script_configs.py  server_conf.py  start.py  web_conf.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  docker.yml
alerts/: destination_email.py  destination_http.py
auth/: auth_base.py  auth_ldap.py
conf/: logging.json
samples/: conf.json
samples/configs/: bash_formatting.json  colortest.json  destroy_world.json  download_kittens.json  included.json  included2.json  included3.json  mult_include.json  mult_words.json  parameterized.json  ploty_html_output.json  (+2 more)
src/: launcher.py  main.py  server.py
tests/: file_download_feature_test.py  model_helper_test.py  process_utils_test.py  test_utils.py
tools/: Dockerfile  Dockerfile_standalone  add_git_tag.sh  build.py  deploy_docker.sh  init.py  report_allure.sh  run_e2e_tests.sh  start_in_virtualenv.sh
utils/: bash_utils.py  env_utils.py  file_utils.py  os_utils.py  process_utils.py  string_utils.py
web/: admin.html  index.html  login.html
web-src/: admin.html  babel.config.js  index.html  login.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vue.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.mutation.js  webpack.prod.js
(+519 files in other folders)
